# ChangeLog for net-zope/zopeedit
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/ChangeLog,v 1.7 2008/03/23 17:46:41 armin76 Exp $

  23 Mar 2008; Raúl Porcel <armin76@gentoo.org> zopeedit-0.9.1.ebuild:
  Add ~sparc wrt #211784

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*zopeedit-0.9.1 (27 May 2006)

  27 May 2006; Radoslaw Stachowiak <radek@gentoo.org>
  +zopeedit-0.9.1.ebuild:
  version bump, #129581, changed method of using package

*zopeedit-0.8 (02 Jan 2005)

  02 Jan 2005; Jodok Batlogg <batlogg@gentoo.org>; zopeedit-0.7.ebuild,
  +zopeedit-0.8.ebuild:
  revision bump, repoman fixes, marked x86

  10 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> zopeedit-0.7.ebuild:
  Marked ~amd64.

*zopeedit-0.7 (22 Jan 2004)

  22 Jan 2004; Heinrich Wendel <lanius@gentoo.org> zopeedit-0.7.ebuild:
  initial release, separated from ExternalEditor
