@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST zopeedit-0.7-src.tgz 22798 RMD160 9733e2338f819ec515d7bdace17ca447c96ae530 SHA1 a1f34b181c0170ed78e3e66f99aa0ce6dfd84fec SHA256 1342ae403f723cef6625d831608e5bd9088d5ac1d11f578bfe96def5a9691361
 DIST zopeedit-0.8-src.tgz 31830 RMD160 729408a4e9d0c2ca5b55ba47657704e530a05a30 SHA1 4a32730986d60d2c15bd52c690c77bd1c0a61732 SHA256 b958d85d4f19673e373cadc6e32a7e5c6df53ff74af580082ca2fc581edd2556
 DIST zopeedit-0.9.1-src.tgz 26693 RMD160 21457edb20692a7c4be2bd3a858bb5d6f22f11cd SHA1 0c9f1331175eba017633691b64b685ff76f5d535 SHA256 30977db0f1c2457d6641e7647e8607f7f6eca514c763d6749ad762dd4e8b47fe
-EBUILD zopeedit-0.7.ebuild 664 RMD160 d1abc74d89ad97ddeb8fbe689a9acd786a56ce39 SHA1 e0d7d8df2e7f72311d8d00bf42def6ea65001e63 SHA256 e921b161c3118426569fab94e7751af8880b6bcff5f0f767267c5bca314a44f7
-EBUILD zopeedit-0.8.ebuild 667 RMD160 8ee2e6d35a9e71f418c57e62649053a69b565fff SHA1 3f351d53819b3b1fc7dac91cb27c70df46a26cc2 SHA256 4e8909d4d7e03a7ac4cfbb97c66733937a9e3db3101f1cd898cd1beead7d9b8b
-EBUILD zopeedit-0.9.1.ebuild 767 RMD160 b72bd38a784b4fd10b4d9b03d6e5291512e8893c SHA1 61704eff68a972090534cf1e24168f6233b25d9b SHA256 2165e105cb5bbc280c3c1a34eb031a4fc61f13a55ed4a504e3bd9e2d9df48530
-MISC ChangeLog 972 RMD160 775178767bce001044c80858b582199acc5b54cd SHA1 89ec712c4680ce83d0ac186b401e8b0c1000a66c SHA256 37ec66cbdf020e18152a79b192d4ef7e7588f9e4681edd620ad782d7f467008e
+EBUILD zopeedit-0.7.ebuild 583 RMD160 78e8131fa0b63ac82a437fc5836331e089efad76 SHA1 06d31dee9fd3b4a127407ed6e14381e563dcef02 SHA256 033d692627923678215eecc4a7588306419df7d85dc67d9d2ce28396cd2feeed
+EBUILD zopeedit-0.8.ebuild 586 RMD160 81d5b87bc9e224dbb85b551f88b763776209be7e SHA1 37fd444f70b8ff213312942d80c2290eaf9a7241 SHA256 8622925234a4d4a8bb277a8f73985452b1391c2cedb226d04d03ff6f90a75bcc
+EBUILD zopeedit-0.9.1.ebuild 756 RMD160 2038b46141b7a4229e4f4922b419b584b0d9023a SHA1 e19e682d7b3c2d7f23005a84e316aa2b8e1dbcee SHA256 2a9edb35829ffec58bc6800d25b62ac2a1e1a19121572afb7b08a07e4757b5c6
+MISC ChangeLog 1112 RMD160 fc1f8ae1b0d61c679bfc4375b0d39dd7a6189649 SHA1 4b56e66dfb01398f8c96ec5f7ff339fcb1acf05e SHA256 9e88c49ce158af6f3d10fecc7a52b55c93b5af654f38368de9ea32f845a5aebc
 MISC metadata.xml 161 RMD160 5e136d45f811478292bd2ee1798a9b0229ffe468 SHA1 9755179a2dee0511818b1f6738ded28e335e1b9a SHA256 e69ac7205cbc2e42a297e20d8f08922003390a345bbf50ccf00d1158a1c97cc5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkg7rBYACgkQVrx5UrvSjscjTACgjBJNovQ/mou9xw8eGx4Drp6X
+Dm8An2/dTaHvNWtvJDnwslSJORYOJZfo
+=ni29
+-----END PGP SIGNATURE-----
