@@ -1,10 +1,11 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/zopeedit-0.7.ebuild,v 1.5 2006/01/27 02:52:14 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/zopeedit-0.7.ebuild,v 1.6 2008/05/27 06:37:04 tupone Exp $
 
 inherit distutils
 
-DESCRIPTION="The ExternalEditor is a Zope product and configurable helper application that allows you to drop into your favorite editor(s) directly from the ZMI to modify Zope objects"
+DESCRIPTION="Configurable helper application that drop you into your favorite
+editor(s) directly from the ZMI"
 HOMEPAGE="http://www.zope.org/Members/Caseman/ExternalEditor/"
 SRC_URI="http://www.zope.org/Members/Caseman/ExternalEditor/0.7/zopeedit-${PV}-src.tgz"
 
@@ -13,4 +14,4 @@ SLOT="0"
 KEYWORDS="~amd64 ~ppc x86"
 IUSE=""
 
-S=${WORKDIR}/${PN}-${PV}-src
+S=${WORKDIR}/${P}-src
