@@ -1,6 +1,10 @@
 # ChangeLog for net-zope/zopeedit
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/ChangeLog,v 1.7 2008/03/23 17:46:41 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zopeedit/Attic/ChangeLog,v 1.8 2008/05/27 06:37:04 tupone Exp $
+
+  27 May 2008; Tupone Alfredo <tupone@gentoo.org> zopeedit-0.7.ebuild,
+  zopeedit-0.8.ebuild, zopeedit-0.9.1.ebuild:
+  Making repoman happy
 
   23 Mar 2008; Raúl Porcel <armin76@gentoo.org> zopeedit-0.9.1.ebuild:
   Add ~sparc wrt #211784
